--- a/games/tetris/Cargo.toml
+++ b/games/tetris/Cargo.toml
@@ -1,15 +1,10 @@
 [package]
-name = "sfml_rs"
+name = "tetris"
 version = "0.1.0"
 edition = "2021"
-
-[workspace]
-resolver = "2"
-members = [
-    "games/*"
-]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tetris = { path = "games/tetris" }
+sfml = "0.20.0"
+
