--- a/games/tetris/Cargo.toml
+++ b/games/tetris/Cargo.toml
@@ -3,7 +3,13 @@ name = "tetris"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[[bin]]
+name = "tetris"
+path = "src/main.rs"
+
+[lib]
+name = "tetris_lib"
+path = "src/lib.rs"
 
 [dependencies]
 sfml = "0.20.0"
